--- a/discharge.ipynb
+++ b/discharge.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d6b9e6f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## INITIALIZE ##\n",
     "from dotenv import load_dotenv\n",
@@ -46,21 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bca6402c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running node: ExtractDiagnoses with model: gpt-4o-mini\n",
-      "=== Extract Diagnoses Node Output (Model: gpt-4o-mini) ===\n",
-      "{'diagnoses': ['Lower Respiratory Tract Infection', 'Seizure', 'Syncope', 'HTN'], 'lab_tests': ['WBC', 'CRP', 'urine for toxicology', 'EEG']}\n",
-      "====================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## EXTRACT DIAGNOSES ##\n",
     "diagnoses = app_graph.run_node(\"ExtractDiagnoses\", model=\"gpt-4o-mini\")"
@@ -73,6 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## EXTRACT MEDICATIONS ##\n",
     "medications = app_graph.run_node(\"ExtractMedications\", model=\"gpt-4o-mini\")\n"
    ]
   },
@@ -83,7 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fixed_medications = app_graph.run_node(\"FixMedications\")\n"
+    "## FIX MEDICATIONS ##\n",
+    "fixed_medications = app_graph.run_node(\"FixMedications\", model=\"gpt-4o\")\n"
    ]
   },
   {
