File selector implemented

--- a/discharge.ipynb
+++ b/discharge.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d6b9e6f2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "expected 'else' after 'if' expression (langgraph_app.py, line 1006)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[36m(most recent call last)\u001b[39m:\n",
-      "  File \u001b[92m~/code/shusrusha/.venv/lib/python3.11/site-packages/IPython/core/interactiveshell.py:3699\u001b[39m in \u001b[95mrun_code\u001b[39m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[36m  \u001b[39m\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mfrom langgraph_app import app_graph\u001b[39m\n",
-      "  \u001b[36mFile \u001b[39m\u001b[32m~/code/shusrusha/langgraph_app.py:1006\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mconfidence_indicator = f\" ({confidence}%)\" if confidence > 0\u001b[39m\n                           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m expected 'else' after 'if' expression\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## INITIALIZE ##\n",
     "from dotenv import load_dotenv\n",
@@ -36,15 +24,425 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "c4ac250b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening file selection dialog...\n",
+      "You can select multiple files by holding Cmd (Mac) or Ctrl (Windows/Linux)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-26 13:35:51.979 Python[39556:3283086] The class 'NSOpenPanel' overrides the method identifier.  This method is implemented by class 'NSWindow'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Selected 4 files:\n",
+      "  - images/3.4.jpeg\n",
+      "  - images/3.1.jpeg\n",
+      "  - images/3.2.jpeg\n",
+      "  - images/3.3.jpeg\n",
+      "\n",
+      "You can now run the OCR cell with these selected files.\n"
+     ]
+    }
+   ],
+   "source": [
+    "## SELECT FILES ##\n",
+    "import os\n",
+    "import glob\n",
+    "import warnings\n",
+    "\n",
+    "# Suppress tkinter warnings on macOS\n",
+    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
+    "\n",
+    "try:\n",
+    "    import tkinter as tk\n",
+    "    from tkinter import filedialog\n",
+    "    \n",
+    "    # Suppress macOS console warnings\n",
+    "    import sys\n",
+    "    from contextlib import redirect_stderr\n",
+    "    from io import StringIO\n",
+    "    \n",
+    "    # Create a root window and hide it\n",
+    "    root = tk.Tk()\n",
+    "    root.withdraw()  # Hide the main window\n",
+    "    root.attributes('-topmost', True)  # Bring dialog to front\n",
+    "    \n",
+    "    # Set the initial directory to the images folder\n",
+    "    initial_dir = os.path.abspath(\"images\")\n",
+    "    \n",
+    "    print(\"Opening file selection dialog...\")\n",
+    "    print(\"You can select multiple files by holding Cmd (Mac) or Ctrl (Windows/Linux)\")\n",
+    "    \n",
+    "    # Capture stderr to suppress warnings\n",
+    "    f = StringIO()\n",
+    "    with redirect_stderr(f):\n",
+    "        # Open file dialog for multiple image files\n",
+    "        selected_images = filedialog.askopenfilenames(\n",
+    "            title=\"Select Discharge Summary Images\",\n",
+    "            initialdir=initial_dir,\n",
+    "            filetypes=[\n",
+    "                (\"Image files\", \"*.jpg *.jpeg *.png *.gif *.bmp *.tiff\"),\n",
+    "                (\"JPEG files\", \"*.jpg *.jpeg\"),\n",
+    "                (\"PNG files\", \"*.png\"),\n",
+    "                (\"All files\", \"*.*\")\n",
+    "            ]\n",
+    "        )\n",
+    "    \n",
+    "    # Clean up the tkinter root window\n",
+    "    root.destroy()\n",
+    "    \n",
+    "    # Convert to list and make paths relative to current directory\n",
+    "    selected_images = list(selected_images)\n",
+    "    if selected_images:\n",
+    "        # Convert absolute paths to relative paths if they're in the images directory\n",
+    "        relative_images = []\n",
+    "        current_dir = os.getcwd()\n",
+    "        for img_path in selected_images:\n",
+    "            try:\n",
+    "                rel_path = os.path.relpath(img_path, current_dir)\n",
+    "                relative_images.append(rel_path)\n",
+    "            except ValueError:\n",
+    "                # If relpath fails, use absolute path\n",
+    "                relative_images.append(img_path)\n",
+    "        \n",
+    "        selected_images = relative_images\n",
+    "        \n",
+    "        print(f\"\\nSelected {len(selected_images)} files:\")\n",
+    "        for file in selected_images:\n",
+    "            print(f\"  - {file}\")\n",
+    "        print(\"\\nYou can now run the OCR cell with these selected files.\")\n",
+    "    else:\n",
+    "        print(\"\\nNo files selected.\")\n",
+    "        selected_images = []\n",
+    "\n",
+    "except ImportError:\n",
+    "    print(\"tkinter not available. Using fallback file selection...\")\n",
+    "    # Fallback to showing available files\n",
+    "    image_files = glob.glob(\"images/*.jpeg\") + glob.glob(\"images/*.jpg\") + glob.glob(\"images/*.png\")\n",
+    "    image_files = [f for f in image_files if not f.endswith('.DS_Store')]\n",
+    "    image_files.sort()\n",
+    "    \n",
+    "    print(\"Available image files:\")\n",
+    "    for i, file in enumerate(image_files, 1):\n",
+    "        print(f\"{i}. {file}\")\n",
+    "    \n",
+    "    # Use all available files as default\n",
+    "    selected_images = image_files\n",
+    "    print(f\"\\nUsing all {len(selected_images)} available files:\")\n",
+    "    for file in selected_images:\n",
+    "        print(f\"  - {file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "e768ea91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing 4 selected files:\n",
+      "  - images/3.4.jpeg\n",
+      "  - images/3.1.jpeg\n",
+      "  - images/3.2.jpeg\n",
+      "  - images/3.3.jpeg\n",
+      "\n",
+      "Running OCR...\n",
+      "=== OCR Node Output (Model: gpt-4o) ===\n",
+      "```markdown\n",
+      "# SHUSRUSHA\n",
+      "A UNIT OF SHUSRUSHA NURSING HOME PVT. LTD.\n",
+      "P-290, C.I.T. Scheme VIM, Swami Swarupananda Sarani, Kolkata - 700 054  \n",
+      "Phone : 2362 8863, 2362 8430, 2364 8910\n",
+      "\n",
+      "## DISCHARGE / TRANSFER / DISCHARGE AGAINST MEDICAL ADVISE CERTIFICATE\n",
+      "\n",
+      "**Name:** Mrs. Bina Jaicwal  \n",
+      "**UHID No.:** 191020039341  \n",
+      "**Bed No.:** 109  \n",
+      "**Sex:** Female  \n",
+      "**Age:** 64 yrs  \n",
+      "**Address:** 40 Mr. Rohit Jaicwal, Raj, Bholanath Sarani Road, Teghoria, Rajarhat, Gopalpur, Baguihati 700157  \n",
+      "\n",
+      "**Date of Admission:** 24/8/15  \n",
+      "**Time of Admission:** 10:00 AM  \n",
+      "**Date of Discharge:** 26/8/15  \n",
+      "**Time of Discharge:**  \n",
+      "\n",
+      "I, Dr. Sunil Tibrewal hereby certify that the above-mentioned patient was under my treatment in this Nursing Home.\n",
+      "\n",
+      "### REASONS FOR ADMISSION : PRESENTING COMPLAINTS\n",
+      "- Vomiting\n",
+      "- Abdominal distension\n",
+      "- Swelling\n",
+      "\n",
+      "### FINAL DIAGNOSIS\n",
+      "- Subacute intestinal obstruction\n",
+      "- HTN\n",
+      "- Hypothyroid\n",
+      "- Hepatitis C Positive\n",
+      "\n",
+      "**ICD 10 CODE:**  \n",
+      "\n",
+      "**H/O ALCOHOLISM / TOBACCO / OTHERS**  \n",
+      "MLC Y / N ☑️ Yes / No / Not Known\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### SIGNIFICANT PAST MEDICAL AND SURGICAL AND ALLERGY OR FAMILY HISTORY\n",
+      "- H/O TAH & BSO -> Hernia & Resection\n",
+      "\n",
+      "### SUMMARY OF KEY INVESTIGATION REPORT TO ARRIVE AT THE DIAGNOSIS\n",
+      "- **CECT:** Collapsed long segment ileum. Sol adheres to (R) suprarenal gland.\n",
+      "\n",
+      "### SUMMARY OF TREATMENT [NAME OF THE PROCEDURES/SURGERIES (IF ANY)]\n",
+      "- **Referred Doctors Name:**  \n",
+      "- **Specialist Name:**  \n",
+      "- **Specialist:**  \n",
+      "\n",
+      "### NOTES ON MEDICAL MANAGEMENT\n",
+      "- Received Cap. Vizylac, Buch, Zedott, ORS, Rantac, Volaprea retard.\n",
+      "\n",
+      "**Medical Treatment**  \n",
+      "- **Blood Transfusion**  \n",
+      "  - PRBC: Yes / No .......Nos  \n",
+      "  - FFP: Yes / No .......Nos  \n",
+      "  - Human Albumin: Yes / No .......Nos  \n",
+      "  - TPN: Yes / No .......Nos  \n",
+      "  - Pethidine/Fentanyl/Morphin: Yes / No .......Nos  \n",
+      "\n",
+      "- **Antibiotic Used:**  \n",
+      "- **Anti Emetic Used:**  \n",
+      "- **PPI:**  \n",
+      "\n",
+      "**Other Supportive Medicines:**  \n",
+      "\n",
+      "---\n",
+      "\n",
+      "### SURGICAL MANAGEMENT : NAME OF THE SURGERY / PROCEDURE\n",
+      "- Patient responded to conservative treatment.\n",
+      "\n",
+      "### COMPLICATIONS IN THE COURSE OF HOSPITALISATION\n",
+      "\n",
+      "### PATIENT CONDITION AT THE TIME OF DISCHARGE\n",
+      "- Ambulatory ☑️\n",
+      "- Non Ambulatory \n",
+      "- With Oxygen \n",
+      "- With BIPAP/CPAP Support \n",
+      "- Any Other Support \n",
+      "\n",
+      "### WHEN & HOW TO OBTAIN URGENT CARE & FOLLOW UP ADVICE\n",
+      "- Fever ☑️\n",
+      "- Wound Oozing ☑️\n",
+      "- SOB \n",
+      "- Surgical Site Pain \n",
+      "- Urine Retention \n",
+      "- Bleeding \n",
+      "- Any Other \n",
+      "\n",
+      "**FOLLOW UP ADVICE**  \n",
+      "\n",
+      "---\n",
+      "\n",
+      "## ADVICE ON DISCHARGE\n",
+      "\n",
+      "1. Ambulatory / Semisolid diet\n",
+      "2. Tab Amlod 5 Tab od after Bf x cont\n",
+      "3. Tab Thyroxin 100 Tab od after Bf x cont\n",
+      "4. Tab Telma 40 Tab od after dinner x cont\n",
+      "5. Tab Rantac 40 - odac x cont 10 days\n",
+      "6. Tab Ondem md 4mg - 6a/c x 3 days\n",
+      "7. Syp. Mucaine 25 ml syrup t 1 cons\n",
+      "   - Aluminium citrate at bedtime x cont 7 days\n",
+      "\n",
+      "8. After 7 days\n",
+      "   - Review with:\n",
+      "     - a) Dr. P. Boddar - Liver specialist for Hepatic C (HS DM)\n",
+      "     - b) PET CT scan for evaluation of soladhen to (R) suprarenal gland.\n",
+      "     - c) Review for HC after 2 weeks attend earlier / ER SOS\n",
+      "\n",
+      "**Signature of the Patient / Attendant**  \n",
+      "**Signature of the Treating Doctor / RMO**  \n",
+      "**Reg. No.**  \n",
+      "**Date:** 26/8/2015\n",
+      "```\n",
+      "======================\n",
+      "Markdown saved to discharge.md\n",
+      "=== OCR Node Output (Model: gpt-4o) ===\n",
+      "```markdown\n",
+      "# SHUSRUSHA\n",
+      "A UNIT OF SHUSRUSHA NURSING HOME PVT. LTD.\n",
+      "P-290, C.I.T. Scheme VIM, Swami Swarupananda Sarani, Kolkata - 700 054  \n",
+      "Phone : 2362 8863, 2362 8430, 2364 8910\n",
+      "\n",
+      "## DISCHARGE / TRANSFER / DISCHARGE AGAINST MEDICAL ADVISE CERTIFICATE\n",
+      "\n",
+      "**Name:** Mrs. Bina Jaicwal  \n",
+      "**UHID No.:** 191020039341  \n",
+      "**Bed No.:** 109  \n",
+      "**Sex:** Female  \n",
+      "**Age:** 64 yrs  \n",
+      "**Address:** 40 Mr. Rohit Jaicwal, Raj, Bholanath Sarani Road, Teghoria, Rajarhat, Gopalpur, Baguihati 700157  \n",
+      "\n",
+      "**Date of Admission:** 24/8/15  \n",
+      "**Time of Admission:** 10:00 AM  \n",
+      "**Date of Discharge:** 26/8/15  \n",
+      "**Time of Discharge:**  \n",
+      "\n",
+      "I, Dr. Sunil Tibrewal hereby certify that the above-mentioned patient was under my treatment in this Nursing Home.\n",
+      "\n",
+      "### REASONS FOR ADMISSION : PRESENTING COMPLAINTS\n",
+      "- Vomiting\n",
+      "- Abdominal distension\n",
+      "- Swelling\n",
+      "\n",
+      "### FINAL DIAGNOSIS\n",
+      "- Subacute intestinal obstruction\n",
+      "- HTN\n",
+      "- Hypothyroid\n",
+      "- Hepatitis C Positive\n",
+      "\n",
+      "**ICD 10 CODE:**  \n",
+      "\n",
+      "**H/O ALCOHOLISM / TOBACCO / OTHERS**  \n",
+      "MLC Y / N ☑️ Yes / No / Not Known\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### SIGNIFICANT PAST MEDICAL AND SURGICAL AND ALLERGY OR FAMILY HISTORY\n",
+      "- H/O TAH & BSO -> Hernia & Resection\n",
+      "\n",
+      "### SUMMARY OF KEY INVESTIGATION REPORT TO ARRIVE AT THE DIAGNOSIS\n",
+      "- **CECT:** Collapsed long segment ileum. Sol adheres to (R) suprarenal gland.\n",
+      "\n",
+      "### SUMMARY OF TREATMENT [NAME OF THE PROCEDURES/SURGERIES (IF ANY)]\n",
+      "- **Referred Doctors Name:**  \n",
+      "- **Specialist Name:**  \n",
+      "- **Specialist:**  \n",
+      "\n",
+      "### NOTES ON MEDICAL MANAGEMENT\n",
+      "- Received Cap. Vizylac, Buch, Zedott, ORS, Rantac, Volaprea retard.\n",
+      "\n",
+      "**Medical Treatment**  \n",
+      "- **Blood Transfusion**  \n",
+      "  - PRBC: Yes / No .......Nos  \n",
+      "  - FFP: Yes / No .......Nos  \n",
+      "  - Human Albumin: Yes / No .......Nos  \n",
+      "  - TPN: Yes / No .......Nos  \n",
+      "  - Pethidine/Fentanyl/Morphin: Yes / No .......Nos  \n",
+      "\n",
+      "- **Antibiotic Used:**  \n",
+      "- **Anti Emetic Used:**  \n",
+      "- **PPI:**  \n",
+      "\n",
+      "**Other Supportive Medicines:**  \n",
+      "\n",
+      "---\n",
+      "\n",
+      "### SURGICAL MANAGEMENT : NAME OF THE SURGERY / PROCEDURE\n",
+      "- Patient responded to conservative treatment.\n",
+      "\n",
+      "### COMPLICATIONS IN THE COURSE OF HOSPITALISATION\n",
+      "\n",
+      "### PATIENT CONDITION AT THE TIME OF DISCHARGE\n",
+      "- Ambulatory ☑️\n",
+      "- Non Ambulatory \n",
+      "- With Oxygen \n",
+      "- With BIPAP/CPAP Support \n",
+      "- Any Other Support \n",
+      "\n",
+      "### WHEN & HOW TO OBTAIN URGENT CARE & FOLLOW UP ADVICE\n",
+      "- Fever ☑️\n",
+      "- Wound Oozing ☑️\n",
+      "- SOB \n",
+      "- Surgical Site Pain \n",
+      "- Urine Retention \n",
+      "- Bleeding \n",
+      "- Any Other \n",
+      "\n",
+      "**FOLLOW UP ADVICE**  \n",
+      "\n",
+      "---\n",
+      "\n",
+      "## ADVICE ON DISCHARGE\n",
+      "\n",
+      "1. Ambulatory / Semisolid diet\n",
+      "2. Tab Amlod 5 Tab od after Bf x cont\n",
+      "3. Tab Thyroxin 100 Tab od after Bf x cont\n",
+      "4. Tab Telma 40 Tab od after dinner x cont\n",
+      "5. Tab Rantac 40 - odac x cont 10 days\n",
+      "6. Tab Ondem md 4mg - 6a/c x 3 days\n",
+      "7. Syp. Mucaine 25 ml syrup t 1 cons\n",
+      "   - Aluminium citrate at bedtime x cont 7 days\n",
+      "\n",
+      "8. After 7 days\n",
+      "   - Review with:\n",
+      "     - a) Dr. P. Boddar - Liver specialist for Hepatic C (HS DM)\n",
+      "     - b) PET CT scan for evaluation of soladhen to (R) suprarenal gland.\n",
+      "     - c) Review for HC after 2 weeks attend earlier / ER SOS\n",
+      "\n",
+      "**Signature of the Patient / Attendant**  \n",
+      "**Signature of the Treating Doctor / RMO**  \n",
+      "**Reg. No.**  \n",
+      "**Date:** 26/8/2015\n",
+      "```\n",
+      "======================\n",
+      "Markdown saved to discharge.md\n"
+     ]
+    }
+   ],
    "source": [
     "## OCR ##\n",
-    "# Example: run the LangGraph workflow\n",
-    "images = [\"images/page1.jpg\", \"images/page2.jpg\", \"images/page3.jpg\", \"images/page4.jpg\"]  # Replace with your actual image file paths\n",
-    "markdown = app_graph.run_node(\"OCR\", images)\n",
+    "# Use the selected images from the file selection above\n",
+    "if 'selected_images' in globals() and selected_images:\n",
+    "    images = selected_images\n",
+    "    print(f\"Processing {len(images)} selected files:\")\n",
+    "    for img in images:\n",
+    "        print(f\"  - {img}\")\n",
+    "else:\n",
+    "    # Fallback to default files if none selected\n",
+    "    images = [\"images/3.1.jpeg\", \"images/3.2.jpeg\", \"images/3.3.jpeg\", \"images/3.4.jpeg\"]\n",
+    "    print(\"No files selected, using default files:\")\n",
+    "    for img in images:\n",
+    "        print(f\"  - {img}\")\n",
+    "\n",
+    "print(\"\\nRunning OCR...\")\n",
+    "markdown = app_graph.run_node(\"OCR\", images, \"gpt-4o\")\n",
+    "\n",
+    "# Clean up markdown text - remove code block wrappers if present\n",
+    "if markdown.startswith(\"```markdown\\n\"):\n",
+    "    markdown = markdown[12:]  # Remove \"```markdown\\n\"\n",
+    "if markdown.endswith(\"\\n```\"):\n",
+    "    markdown = markdown[:-4]  # Remove \"\\n```\"\n",
+    "elif markdown.endswith(\"```\"):\n",
+    "    markdown = markdown[:-3]  # Remove \"```\"\n",
+    "\n",
+    "# Also handle case where it starts with just ```\n",
+    "if markdown.startswith(\"```\\n\"):\n",
+    "    markdown = markdown[4:]  # Remove \"```\\n\"\n",
+    "\n",
+    "# Save the cleaned markdown to a file\n",
+    "with open(\"discharge.md\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(markdown)\n",
+    "print(\"Markdown saved to discharge.md\")\n",
+    "\n",
+    "# Display the markdown in the notebook\n",
     "display(Markdown(markdown))"
    ]
   },
@@ -90,6 +488,13 @@
    "source": [
     "## GENERATE SUMMARY ##\n",
     "html_summary = app_graph.run_node(\"AddSummaryPills\")\n",
+    "\n",
+    "# Save the HTML summary to a file\n",
+    "with open(\"summary.html\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(html_summary)\n",
+    "print(\"Summary saved to summary.html\")\n",
+    "\n",
+    "# Display the HTML in the notebook\n",
     "display(HTML(html_summary))"
    ]
   }
