Parallel fix_medications for improved speed

--- a/discharge.ipynb
+++ b/discharge.ipynb
@@ -590,7 +590,7 @@
     "    print(\"Could not find system command to open discharge.md\")\n",
     "\n",
     "# Display the markdown in the notebook\n",
-    "display(Markdown(markdown))"
+    "# display(Markdown(markdown))"
    ]
   },
   {
